--- a/src/app/dim-ui/Sheet.m.scss
+++ b/src/app/dim-ui/Sheet.m.scss
@@ -4,6 +4,7 @@
   transform: scale(0.98) !important;
   transition: transform 300ms linear;
 }
+
 .disabledScreen {
   background-color: black;
   position: absolute;
@@ -17,4 +18,17 @@
     display: block;
     opacity: 0.6;
   }
+}
+
+.horizontalScroller {
+  flex: 1;
+  white-space: nowrap;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  -webkit-overflow-scrolling: touch;
+  contain: content;
+  touch-action: none;
 }
